[gd_scene load_steps=16 format=2]

[ext_resource path="res://fuentes/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://img/registro.png" type="Texture" id=2]
[ext_resource path="res://img/btn_registro.png" type="Texture" id=3]
[ext_resource path="res://img/btn_registro2.png" type="Texture" id=4]
[ext_resource path="res://img/salir.png" type="Texture" id=5]
[ext_resource path="res://script/Registro.gd" type="Script" id=6]
[ext_resource path="res://fuentes/arialbd.ttf" type="DynamicFontData" id=7]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="Theme" id=7]

[sub_resource type="DynamicFont" id=8]
size = 19
font_data = ExtResource( 7 )

[node name="Registro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="correo" type="LineEdit" parent="."]
margin_left = 689.0
margin_top = 474.0
margin_right = 1324.0
margin_bottom = 543.0
theme = SubResource( 1 )
custom_colors/cursor_color = Color( 0.788235, 0.141176, 0.141176, 1 )
custom_colors/clear_button_color_pressed = Color( 1, 0.447059, 0.447059, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
clear_button_enabled = true

[node name="name" type="LineEdit" parent="."]
margin_left = 689.0
margin_top = 280.0
margin_right = 1324.0
margin_bottom = 349.0
theme = SubResource( 1 )
custom_colors/cursor_color = Color( 0.788235, 0.141176, 0.141176, 1 )
custom_colors/clear_button_color_pressed = Color( 1, 0.447059, 0.447059, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
clear_button_enabled = true

[node name="contra" type="LineEdit" parent="."]
margin_left = 694.0
margin_top = 656.0
margin_right = 1329.0
margin_bottom = 725.0
theme = SubResource( 4 )
custom_colors/cursor_color = Color( 0.788235, 0.141176, 0.141176, 1 )
custom_colors/clear_button_color_pressed = Color( 1, 0.447059, 0.447059, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
secret = true
clear_button_enabled = true

[node name="contra2" type="LineEdit" parent="."]
margin_left = 694.0
margin_top = 838.0
margin_right = 1329.0
margin_bottom = 907.0
theme = SubResource( 4 )
custom_colors/cursor_color = Color( 0.788235, 0.141176, 0.141176, 1 )
custom_colors/clear_button_color_pressed = Color( 1, 0.447059, 0.447059, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
secret = true
clear_button_enabled = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 879.0
margin_top = 941.0
margin_right = 1180.0
margin_bottom = 1027.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="TextureButton2" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.701961 )
self_modulate = Color( 1, 1, 1, 0.639216 )
margin_left = 38.0
margin_top = 43.0
margin_right = 98.0
margin_bottom = 94.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0.352941 )
margin_left = 832.0
margin_top = 991.0
margin_right = 1221.0
margin_bottom = 1098.0
theme = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "ninguno"
align = 1
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
